--- a/thread.ipynb
+++ b/thread.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ressources** : <a href=\"https://webge.synology.me/dokuwiki/doku.php?id=python:accueilpython\" target=\"_blank\"><input type=\"button\" value=\"Wiki Python sur WebGE\"></a> "
+    "**Ressources** : <a href=\"https://webge.fr/dokuwiki/doku.php?id=python:accueilpython\" target=\"_blank\"><input type=\"button\" value=\"Wiki Python sur WebGE\"></a> "
    ]
   },
   {
@@ -26,26 +26,38 @@
    "metadata": {},
    "source": [
     "### Sommaire\n",
-    "+ **Introduction**\n",
-    "+ **Exemple 1** - Comptage en parallèle\n",
-    "+ **Exemple 2** - Compteur global partagé (problème de concurrence)\n",
-    "+ **Exemple 3** - Interblocage\n",
-    "+ **Synthèse**\n",
-    "+ **Résumé**"
+    "<ol>\n",
+    "    <li>Introduction\n",
+    "        <ol>\n",
+    "            <li>Les processus</li>\n",
+    "            <li>Les threads</li>\n",
+    "            <li>Quelle est la différence entre Thread et Processus ?</li>\n",
+    "        </ol>\n",
+    "    </li>\n",
+    "    <li>Premier exemple - Comptage en parallèle</li>\n",
+    "    <li>Deuxième exemple - Compteur global partagé</li>\n",
+    "        <ol>\n",
+    "            <li>Problème de concurrence</li>\n",
+    "            <li>Correction du problème de concurence</li>\n",
+    "        </ol>\n",
+    "    <li>Troisième exemple - Interblocage</li>\n",
+    "    <li>Synthèse</li>\n",
+    "    <li>Résumé</li>\n",
+    "</ol>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction\n",
-    "#### Les processus\n",
-    "<em>Grâce à leur système d'exploitation **multitâche**, les ordinateurs exécutent de façon **concurrente** plusieurs programmes.  L'exécution d'un programme s'appelle un **processus**. C'est le système d'exploitation, et en particulier l'**ordonnanceur** (une des fonctionnalités du **noyau**), qui détermine quel processus s'exécute à un instant donné. Le fait pour un processus d'être interrompu s'appelle une **commutation de contexte**. Plusieurs processus s'exécutant de façon concurrente peuvent s'**interbloquer** s'ils attendent de pouvoir accéder à un même ensemble de **ressources en accès exclusif**. </em><br>\n",
+    "### 1. Introduction\n",
+    "#### 1.a Les processus\n",
+    "<em>Grâce à leur système d'exploitation **multitâche**, les ordinateurs exécutent plusieurs programmes de façon **concurrente**. L'exécution d'un programme s'appelle un **processus**. C'est le système d'exploitation, et en particulier l'**ordonnanceur** (une des fonctionnalités du **noyau**), qui détermine quel processus s'exécute à un instant donné. Le fait pour un processus d'être interrompu s'appelle une **commutation de contexte**. Plusieurs processus s'exécutant de façon concurrente peuvent s'**interbloquer** s'ils attendent de pouvoir accéder à un même ensemble de **ressources en accès exclusif**. </em><br>\n",
     "<img src=\"img/se.png\"> <br>\n",
-    "#### Les threads\n",
+    "#### 1.b Les threads\n",
     "<em>Les **threads** ou processus légers sont des \"sous-processus\", démarrés par un processus et s'exécutant de manière concurrente avec le reste du programme. L'accès à des ressources par plusieurs threads peut être protégé par des **verrous**. Une portion de code comprise entre l'acquisition et le relâchement d'un verrou s'appelle une **section critique**. <br>\n",
     "Le module threading de la bibliothèque standard Python permet de démarrer des threads.</em><br>\n",
-    "#### Quelle est la différence entre Thread et Processus ?\n",
+    "#### 1.c Quelle est la différence entre Thread et Processus ?\n",
     "<em>Les threads (du même processus) s'exécutent dans un espace mémoire partagé, tandis que les processus s'exécutent dans des espaces mémoire différents.</em>\n",
     "<img src=\"img/threads.png\"> "
    ]
@@ -62,8 +74,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemple 1 - Comptage en parallèle\n",
-    "<em>Dans le code ci-dessous, le programme principal effectue une boucle et appelle quatre fois l'expression <span style=\"font-family:Consolas;font-weight:bold;font-style:normal\">threading.Thread(target=hello, arg=[n])</span>. Cette dernière crée un objet de type **Thread**. La variable <span class=\"code\">t</span> contient l'objet **Thread** créé. La méthode **start()** lance l'exécution de la fonction en tâche de fond. Cette méthode rend directement la main et le programme principal continue de s'exécuter de façon concurrente au thread démarré. Une fois la boucle exécutée, ce programme comporte cinq *threads* : ceux démarrés par start() et le programme principal.</em>"
+    "### 2. Premier exemple - Comptage en parallèle\n",
+    "<em>Dans le code ci-dessous, le programme principal effectue une boucle et appelle quatre fois l'expression <span style=\"font-family:Consolas;font-weight:bold;font-style:normal\">threading.Thread(target=hello, arg=[n])</span>. Cette dernière crée un objet de type **Thread**. La variable <span class=\"code\"><strong>t</strong></span> contient l'objet **Thread** créé. La méthode **start()** lance l'exécution de la fonction en tâche de fond. Cette méthode rend directement la main et le programme principal continue de s'exécuter de façon concurrente au thread démarré. Une fois la boucle exécutée, ce programme comporte cinq *threads* : les quatre démarrés par start() et le programme principal.</em>"
    ]
   },
   {
@@ -98,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:blue; font-weight:bold\">Correction 1</p>\n",
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION 1</p>\n",
     "<ul style=\"color:blue;\">\n",
     "    <li>Les threads alternent leur exécution au gré des commutations de contexte.</li>\n",
     "    <li>Deux exécutions successives donnent des affichages différents.</li>\n",
@@ -109,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Remarque** : L'ordre dans lequel sont démarrés les threads ne donne aucune indication sur l'ordre dans lequel ils peuvent se terminer."
+    "<table><tr><td style=\"color:red; font-size:14px\"><strong>REMARQUE</strong> : L'ordre dans lequel sont démarrés les threads ne donne aucune indication sur l'ordre dans lequel ils peuvent se terminer.</td></tr></table>"
    ]
   },
   {
@@ -159,42 +171,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemple 2 - Compteur global partagé (problème de concurrence)\n",
-    "Les threads peuvent servir à illustrer les problèmes de concurrence. Le programme ci-dessous définit une variable globale **COMPTEUR**. Comme hello() dans le programme précédent, la fonction **incrc()** s'exécute dans des Threads. Le programme principal déclare un tableau vide th. Il démarre ensuite quatre threads et stocke les objets correspondants dans le tableau th, après les avoir démarrés. Pour chacun des threads stockés, la méthode **join()** est appelée. Cette méthode permet d'attendre que le thread auquel on l'applique soit terminé. Si le thread est déjà terminé, la méthode se termine immédiatement.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Activité 3a. Analyse** du programme <br>\n",
-    "> Que fait la fonction incrc ? Quelle devrait être la valeur de COMPTEUR à la fin du programme ? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<p style=\"color:blue; font-weight:bold\">Correction 3a</p>\n",
-    "<ul style=\"color:blue;\">\n",
-    "    <li>La fonction incrc() exécute 100000 itérations d'une boucle qui incrémente la variable COMPTEUR.</li>\n",
-    "    <li>A la fin du programme, la variable COMPTEUR devrait être égale à 400000.</li>\n",
-    "</ul>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Activité 3b. Exécutez** plusieurs fois le code ci-dessous. Que remarquez-vous ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<p style=\"color:blue; font-weight:bold\">Correction 3b</p>\n",
-    "<p style=\"color:blue;\">La valeur finale de COMPTEUR est égale à 400000</p>"
+    "### 3. Deuxième exemple - Compteur global partagé\n",
+    "#### 3.A Problème de concurence\n",
+    "<em>Les threads peuvent servir à illustrer les problèmes de concurrence. Le programme ci-dessous définit une variable globale **COMPTEUR**. Comme hello() dans le programme précédent, la fonction **incrc()** ci-dessous s'exécute dans des Threads. Le programme principal déclare un tableau vide <strong>th</strong>. Il démarre ensuite quatre threads et stocke les objets correspondants dans le tableau th, après les avoir démarrés. Pour chacun des threads stockés, la méthode **join()** est appelée. Cette méthode permet d'attendre que le thread auquel on l'applique soit terminé. Si le thread est déjà terminé, la méthode se termine immédiatement.</em>\n"
    ]
   },
   {
@@ -212,8 +191,9 @@
     "def incrc():\n",
     "    global COMPTEUR\n",
     "    for _ in range(100000):\n",
-    "        v = COMPTEUR      # Ces deux lignes pourraient être remplacées par COMPTEUR +=1. \n",
-    "        COMPTEUR = v + 1  # Elles sont utilisée ici pour simplifier les explications\n",
+    "        COMPTEUR+=1\n",
+    "        #v = COMPTEUR      # Ces deux lignes pourraient être remplacées par COMPTEUR +=1. \n",
+    "        #COMPTEUR = v + 1  # Elles sont utilisée ici pour simplifier les explications\n",
     "\n",
     "th=[] # tableau de threads\n",
     "for n in range(4):\n",
@@ -231,11 +211,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
-    "\n",
-    "**REMARQUE** : Contrairement à ce que l'on peut observer sur quelques essais, le programme ci-dessus ne fonctionne pas correctement dans la durée.\n",
-    "\n",
-    "----"
+    "> **Activité 3a. Analyse** du programme <br>\n",
+    "> Que fait la fonction incrc ? Quelle devrait être la valeur de COMPTEUR à la fin du programme ? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION 3a</p>\n",
+    "<ul style=\"color:blue;\">\n",
+    "    <li>La fonction incrc() exécute 100000 itérations d'une boucle qui incrémente la variable COMPTEUR.</li>\n",
+    "    <li>A la fin du programme, la variable COMPTEUR devrait être égale à 400000.</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Activité 3b. Exécutez** plusieurs fois le code ci-dessus. Que remarquez-vous ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION 3b</p>\n",
+    "<p style=\"color:blue;\">La valeur finale de COMPTEUR est égale à 400000</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr><td style=\"color:red; font-size:14px\"><strong>REMARQUE</strong> : Contrairement à ce que l'on peut observer sur quelques essais, le programme ci-dessus ne fonctionne pas correctement dans la durée.</td></tr></table>"
    ]
   },
   {
@@ -269,8 +279,8 @@
     "def incrc():\n",
     "    global COMPTEUR\n",
     "    for c in range(100000):\n",
-    "        v = COMPTEUR\n",
-    "        COMPTEUR = v + 1\n",
+    "        COMPTEUR += 1\n",
+    "\n",
     "\n",
     "print(\"En attente d'une erreur !\")\n",
     "\n",
@@ -284,7 +294,7 @@
     "        t.join()\n",
     "    i+=1\n",
     "    if COMPTEUR != 400000:\n",
-    "    print(f\"Valeur finale de COMPTEUR = {COMPTEUR} après {i} tests\") \n",
+    "        print(f\"Valeur finale de COMPTEUR = {COMPTEUR} après {i} tests\") \n",
     "    COMPTEUR=0"
    ]
   },
@@ -292,15 +302,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correction du problème de concurrence dans le programme \"Compteur partagé\"\n",
-    "Pour corriger ce problème, il faut garantir l'**accès EXCLUSIF** à la variable compteur entre sa lecture et son écriture. On peut pour cela utiliser un verrou. Un **verrou** est un objet que l'on essaye d'acquérir. Si on est le premier à faire cette demande, on acquiert le verrou. On peut le rendre à tout moment. Si en revanche quelqu'un d'autre tient le verrou alors on est bloqué jusqu'à ce qu'il soit libéré. Des verrous munis de ces deux opérations sont disponibles dans le **module threading** avec le constructeur **Lock()**. Une fois le verrou construit, on peut tenter de l'acquérir avec la méthode **acquire()** et on peut le rendre avec la méthode **release()**. "
+    "#### 3.B Correction du problème de concurrence dans le programme \"Compteur partagé\"\n",
+    "<em>Pour corriger ce problème, il faut garantir l'<strong>accès EXCLUSIF</strong> à la variable <strong>COMPTEUR</strong> entre sa lecture et son écriture. On peut pour cela utiliser un verrou. Un <strong>verrou</strong> est un objet que l'on essaye d'acquérir. Si on est le premier à faire cette demande, on acquiert le verrou. On peut le rendre à tout moment. Si en revanche quelqu'un d'autre tient le verrou alors on est bloqué jusqu'à ce qu'il soit libéré. Des verrous munis de ces deux opérations sont disponibles dans le <strong>module threading</strong> avec le constructeur <strong>Lock()</strong>. Une fois le verrou construit, on peut tenter de l'acquérir avec la méthode <strong>acquire()</strong> et on peut le rendre avec la méthode <strong>release()</strong>.</em>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note** : Une portion de code protégée par un verrou s'appelle une **SECTION CRITIQUE**."
+    "<table><tr><td style=\"color:blue; font-size:14px\"><strong>NOTE</strong> : Une portion de code protégée par un verrou s'appelle une <strong>SECTION CRITIQUE</strong>.</td></tr></table>"
    ]
   },
   {
@@ -319,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:blue; font-weight:bold\">Correction 5</p>\n",
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION 5</p>\n",
     "<ul style=\"color:blue;\">\n",
     "    <li>a) COMPTEUR = 40000, le résultat est celui attendu.</li>\n",
     "    <li>b) Un thread ne peut pas incrémenter le compteur s'il ne dispose pas du verrou. Un seul thread peut disposer du verrou. Pour qu'un thread se termine, il doit avoir incrémenté le compteur 10000 fois. </li>\n",
@@ -366,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemple 3 - Interblocage\n",
+    "### 4. Troisième exemple - Interblocage\n",
     "L'interblocage se produit lorsque des processus concurrents **s'attendent mutuellement**. L'utilisation de plusieurs verrous rend les **interblocages** possibles.\n",
     "<img src=\"img/interblocage.png\">"
    ]
@@ -385,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:blue; font-weight:bold\">Correction 6a</p>\n",
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION 6a</p>\n",
     "<ul style=\"color:blue;\">a) Pas d'interblocage\n",
     "    <li>f1 a acquit le verrou 1</li>   \n",
     "    <li>f1 a acquit le verrou 2</li> \n",
@@ -460,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:blue; font-weight:bold\">Correction 6b</p>\n",
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION 6b</p>\n",
     "<ul style=\"color:blue;\">\n",
     "    <li>Exemple : le blocage ne se produit plus pour 10000 suivi de 1000</li> \n",
     "    <li>Non, car rien ne garantit que le programme s'exécutera de la même façon sur une autre machine.</li>\n",
@@ -471,7 +481,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Activité 7a. SYNTHESE** <br>\n",
+    "### 5. SYNTHESE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Activité 7a.** <br>\n",
     "> On considère un petit système embarqué : un **microcontrôleur** relié à trois **LED A, B, C**. Une LED peut être éteinte ou éclairée et on peut configurer sa couleur. On dispose de trois programmes qui affichent des signaux lumineux en faisant clignoter les LED. Chaque programme possède une LED primaire et une LED secondaire. <br>\n",
     "> - Le programme P1 affiche ses signaux sur A (primaire) et B (secondaire) en vert.<br>\n",
     "> - Le programme P2 affiche ses signaux sur B (primaire) et C (secondaire) en orange.<br>\n",
@@ -494,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:blue; font-weight:bold\">Correction 7a</p><br>\n",
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION 7a</p><br>\n",
     "<span style=\"color:blue;\"> On considère l'enchaînement suivant :</span></br>\n",
     "<ul style=\"color:blue;\">\n",
     "    <li>P1 acquiert A (étape 1) puis est interrompu.</li>\n",
@@ -552,6 +569,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. RESUME\n",
+    "Les **threads** ou **processus légers** sont des \"sous-processus\" s'exécutant de manière concurente. L'accès à des ressources par plusieurs threads peut être protégé par des **verrous**. Une portion de code comprise entre l'acquisition et le relâchement d'un verrou s'appelle une **section critique**. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -575,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
