--- a/thread.ipynb
+++ b/thread.ipynb
@@ -94,8 +94,9 @@
     "\n",
     "\n",
     "for numth in range(4):\n",
-    "    th = threading.Thread(target=hello, args=[numth]) # l'argument de type target est une fonction et l'argument arg un tableau\n",
-    "    th.start()                                        # d'arguments passés à la fonction"
+    "    th = threading.Thread(target=hello, args=[numth]) # l'argument de type target est une fonction et l'argument \n",
+    "    th.start()                                        # args est un tableau d'arguments passés à la fonction.\n",
+    "                                                      # Ici, on passe le numéro numth du thread."
    ]
   },
   {
@@ -148,11 +149,13 @@
     "# Correction\n",
     "\n",
     "import threading\n",
+    "\n",
     "'''\n",
-    "num : numéro du thread\n",
-    "msg : message affiché\n",
-    "nb : nombre de messages\n",
+    "numth : numéro du thread\n",
+    "msg : tableau des messages à afficher\n",
+    "nb : tableau des nombres de messages\n",
     "'''\n",
+    "\n",
     "def hello(num,msg,nb):\n",
     "    for i in range(nb):\n",
     "        print(f\"{msg} {i}\")\n",
@@ -192,8 +195,8 @@
     "    global COMPTEUR\n",
     "    for _ in range(100000):\n",
     "        COMPTEUR+=1\n",
-    "        #v = COMPTEUR      # Ces deux lignes pourraient être remplacées par COMPTEUR +=1. \n",
-    "        #COMPTEUR = v + 1  # Elles sont utilisée ici pour simplifier les explications\n",
+    "        v = COMPTEUR      # Ces deux lignes pourraient être remplacées par COMPTEUR +=1. \n",
+    "        COMPTEUR = v + 1  # Elles sont utilisées ici pour simplifier les explications.\n",
     "\n",
     "th=[] # tableau de threads\n",
     "for n in range(4):\n",
