--- a/thread.ipynb
+++ b/thread.ipynb
@@ -158,7 +158,7 @@
     "    global COMPTEUR\n",
     "    for _ in range(10):\n",
     "        v = COMPTEUR\n",
-    "        # logging.info(f\"Thread {n} - cpt={COMPTEUR}\")\n",
+    "        logging.info(f\"Thread {n} - cpt={COMPTEUR}\")\n",
     "        COMPTEUR = v + 1\n",
     "\n",
     "# Programme principal\n",
@@ -184,8 +184,7 @@
     "> **Activité 2. Analyse et tests** du programme ci-dessus. <br>\n",
     "> 1. Que fait la fonction incrc ? \n",
     "> 2. Quelle doit être la valeur de COMPTEUR à la fin du programme ? \n",
-    "> 3. Testez le programme plusieurs fois. La valeur est-elle celle supposée ?\n",
-    "> 4. Décommentez la ligne <span style=\"font-family:Consolas;font-weight:bold;font-style:normal\"># logging.info(f\"Thread {n} - cpt={COMPTEUR}\")</span>. Testez le programme plusieurs fois. La valeur est-elle celle supposée ?. Pourquoi ?"
+    "> 3. Testez le programme plusieurs fois. La valeur est-elle toujours celle supposée ? Pourquoi ?"
    ]
   },
   {
@@ -196,8 +195,7 @@
     "<ul style=\"color:blue;\">\n",
     "    <li>1. La fonction incrc() exécute 10 itérations d'une boucle qui incrémente la variable COMPTEUR.</li>\n",
     "    <li>2. A la fin du programme, la variable COMPTEUR devrait être égale à 40.</li>\n",
-    "    <li>3. 10 tests => COMPTEUR = 40.</li>\n",
-    "    <li>4. 10 tests => COMPTEUR =/= 40 car la section critique n'est pas protégée par un mutex.</li>\n",
+    "    <li>3. Non, 10 tests => COMPTEUR =/= 40 car la section critique n'est pas protégée par un mutex.</li>\n",
     "</ul>"
    ]
   },
@@ -235,11 +233,11 @@
     "def incrc(n):\n",
     "    global COMPTEUR\n",
     "    for _ in range(10):\n",
-    "        verrou.acquire() # Acquisition du verrou\n",
+    "        verrou.acquire() # A compléter : Acquisition du verrou\n",
     "        v = COMPTEUR\n",
     "        logging.info(f\"Thread {n} - cpt={COMPTEUR}\")\n",
     "        COMPTEUR = v + 1\n",
-    "        verrou.release() # Relâchement du verrou\n",
+    "        verrou.release() # A compléter : Relâchement du verrou\n",
     "\n",
     "# Programme principal\n",
     "format = \"%(asctime)s: %(message)s\"\n",
@@ -441,8 +439,8 @@
    "metadata": {},
    "source": [
     "> **Activité 5**<br>\n",
-    "> En vous inspirant du programme du paragraphe 2, écrivez** un programme qui crée et démarre **quatre** fonctions concurrentes affichant plusieurs fois un message de bienvenue personnalisé (maximum **dix** fois le message).<br>\n",
-    "\n",
+    "> En vous inspirant du programme du paragraphe 2, écrivez un programme qui crée et démarre **quatre** fonctions concurrentes affichant plusieurs fois un message de bienvenue personnalisé (maximum **dix** fois le message).<br>\n",
+    ">\n",
     "> *Exemple de résultats attendus*<br>\n",
     "Bonjour, je suis le thread 0 et ceci est le message 1<br>\n",
     "... <br>\n",
@@ -537,7 +535,21 @@
    "metadata": {},
    "source": [
     "> **Activité 6b** <br>\n",
-    "Téléchargez, copiez et complétez le code situé ici : https://gist.github.com/WebGE/f24c17bb13f10b38eaf21725451e3754"
+    "Téléchargez, copiez et complétez le code situé ici : https://gist.github.com/WebGE/f24c17bb13f10b38eaf21725451e3754\n",
+    "\n",
+    "> *Exemple de résultats attendus*<br>\n",
+    "11:21:14: LedA=vert par P1 <br>\n",
+    "11:21:14: LedB=vert par P1 <br>\n",
+    "11:21:14: LedC=rouge par P3 <br>\n",
+    "11:21:14: LedB relachée par P1 <br>\n",
+    "11:21:14: LedB=bleu par P2 <br>\n",
+    "11:21:14: LedA relachée par P1 <br>\n",
+    "11:21:14: LedA=rouge par P3 <br>\n",
+    "11:21:14: LedA relachée par P3 <br>\n",
+    "11:21:14: LedA=vert par P1 <br>\n",
+    "11:21:14: LedC relachée par P3 <br>\n",
+    "11:21:14: LedC=bleu par P2 <br>\n",
+    "11:21:14: LedC relachée par P2 <br>"
    ]
   },
   {
@@ -620,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
