--- a/thread.ipynb
+++ b/thread.ipynb
@@ -233,11 +233,11 @@
     "def incrc(n):\n",
     "    global COMPTEUR\n",
     "    for _ in range(10):\n",
-    "        verrou.acquire() # A compléter : Acquisition du verrou\n",
+    "        verrou.acquire() # Acquisition du verrou\n",
     "        v = COMPTEUR\n",
     "        logging.info(f\"Thread {n} - cpt={COMPTEUR}\")\n",
     "        COMPTEUR = v + 1\n",
-    "        verrou.release() # A compléter : Relâchement du verrou\n",
+    "        verrou.release() # Relâchement du verrou\n",
     "\n",
     "# Programme principal\n",
     "format = \"%(asctime)s: %(message)s\"\n",
@@ -439,8 +439,8 @@
    "metadata": {},
    "source": [
     "> **Activité 5**<br>\n",
-    "> En vous inspirant du programme du paragraphe 2, écrivez un programme qui crée et démarre **quatre** fonctions concurrentes affichant plusieurs fois un message de bienvenue personnalisé (maximum **dix** fois le message).<br>\n",
-    ">\n",
+    "> En vous inspirant du programme du paragraphe 2, écrivez** un programme qui crée et démarre **quatre** fonctions concurrentes affichant plusieurs fois un message de bienvenue personnalisé (maximum **dix** fois le message).<br>\n",
+    "\n",
     "> *Exemple de résultats attendus*<br>\n",
     "Bonjour, je suis le thread 0 et ceci est le message 1<br>\n",
     "... <br>\n",
@@ -496,7 +496,7 @@
     "> - Le programme P2 affiche ses signaux sur B (primaire) et C (secondaire) en bleu.<br>\n",
     "> - Le programme P3 affiche ses signaux sur C (primaire) et A (secondaire) en rouge.<br>\n",
     ">\n",
-    "> Comme les LED ne peuvent pas être configurées dans deux couleurs en même temps, le système propose deux primitives **acquerirLED(nom)** et **rendreLED(nom)** qui permettent respectivement d'acquérir et de relâcher une LED. Si une LED est déjà acquise par un programme Pi alors acquerirLED() dans un programme Pj bloque Pj (i différent de j).<br>\n",
+    "> Comme les LED ne peuvent pas être configurées dans deux couleurs en même temps, le système propose deux primitives **acquerirLED(nom)** et **rendreLED(nom)** qui permettent respectivement d'acquérir et de relâcher une LED. <br> **nom** prend la valeur primaire ou secondaire. <br> Si une LED est déjà acquise par un programme Pi alors acquerirLED(nom) dans un programme Pj bloque Pj (i différent de j).<br>\n",
     "> On suppose que chacun des trois programmes P1, P2, P3 effectue les **actions** suivantes en boucle :<br>\n",
     "> 1. acquérir la LED primaire\n",
     "> 2. acquérir la LED secondaire\n",
@@ -513,7 +513,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:blue; font-weight:bold\">CORRECTION Activié 6a</p><br>\n",
+    "<p style=\"color:blue; font-weight:bold\">CORRECTION Activié 6a</p>\n",
+    "<p>Le contexte peut être schématisé comme ci-dessous.</p>\n",
     "<img src=\"img/processLed.png\" width=\"200px\"> <br>\n",
     "<span style=\"color:blue;\"> On considère l'enchaînement suivant :</span></br>\n",
     "<ul style=\"color:blue;\">\n",
@@ -536,7 +537,7 @@
    "source": [
     "> **Activité 6b** <br>\n",
     "Téléchargez, copiez et complétez le code situé ici : https://gist.github.com/WebGE/f24c17bb13f10b38eaf21725451e3754\n",
-    "\n",
+    ">\n",
     "> *Exemple de résultats attendus*<br>\n",
     "11:21:14: LedA=vert par P1 <br>\n",
     "11:21:14: LedB=vert par P1 <br>\n",
@@ -595,9 +596,7 @@
     "p2 = threading.Thread(target=prog, args=[2,'B','C','bleu'])\n",
     "p3 = threading.Thread(target=prog, args=[3,'C','A','rouge'])\n",
     "\n",
-    "p1.start()\n",
-    "p2.start()\n",
-    "p3.start()"
+    "p1.start();p2.start();p3.start();"
    ]
   },
   {
@@ -632,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
