--- a/thread.ipynb
+++ b/thread.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "### Objectifs\n",
-    "**Illustrer l'ordre d'exécution de threads, les problèmes de concurrence et d'interblocage**. "
+    "> **Illustrer l'ordre d'exécution de threads, les problèmes de concurrence et d'interblocage**. "
    ]
   },
   {
@@ -68,14 +68,55 @@
    "metadata": {},
    "source": [
     "### 2. Illustration de l'ordre d'exécution de threads\n",
-    "<em>Dans le code ci-dessous, le programme principal crée quatre Threads <span class=\"code\"><strong>th</strong></span> à l'aide de l'instruction <span style=\"font-family:Consolas;font-weight:bold;font-style:normal\">threading.Thread(target=hello, arg=[n])</span>. Lorsque l'on crée un Thread, on lui transmet une fonction et la liste des arguments de cette fonction. La méthode **start()** lance l'exécution du Tread en tâche de fond. Cette méthode rend la main et le programme principal continue de s'exécuter de façon concurrente au(x) Thread(s) démarré(s). Une fois la boucle exécutée, le programme comporte cinq *threads* : les quatre démarrés par start() plus celui associé au programme principal. Un compteur <strong>cmpt</strong> est créé dans chaque thread pour illustrer leur ordre d'exécution.</em>"
+    "<em>Dans le code ci-dessous, le programme principal crée quatre threads <span class=\"code\"><strong>th</strong></span> à l'aide de l'instruction <span style=\"font-family:Consolas;font-weight:bold;font-style:normal\">threading.Thread(target=hello, arg=[n])</span>. Lorsque l'on crée un thread, on lui transmet une fonction et la liste des arguments de cette fonction. La méthode **start()** lance l'exécution du thread en tâche de fond. Cette méthode rend la main et le programme principal continue de s'exécuter de façon concurrente au(x) thread(s) démarré(s). Une fois la boucle <strong>for</strong> exécutée, le programme comporte cinq *threads* : les quatre démarrés par start() plus celui associé au programme principal. Un compteur <strong>cmpt</strong> est créé dans chaque thread pour illustrer leur ordre d'exécution.</em>\n",
+    "\n",
+    "<strong>Note</strong> : la bibliothèque <a href=\"https://docs.python.org/fr/3/howto/logging.html\" target=\"_blank\">logging</a> est dédiée à la journalisation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06:38:53: PPrinc : avant de lancer le Thread 0\n",
+      "06:38:53: Thread 0: démarrage\n",
+      "06:38:53: PPrinc : avant de lancer le Thread 1\n",
+      "06:38:53: Thread 0 : cmpt0=0\n",
+      "06:38:53: Thread 1: démarrage\n",
+      "06:38:53: PPrinc : avant de lancer le Thread 2\n",
+      "06:38:53: Thread 1 : cmpt1=0\n",
+      "06:38:53: Thread 2: démarrage\n",
+      "06:38:53: PPrinc : avant de lancer le Thread 3\n",
+      "06:38:53: Thread 2 : cmpt2=0\n",
+      "06:38:53: Thread 3: démarrage\n",
+      "06:38:53: Thread 3 : cmpt3=0\n",
+      "06:38:53: Thread 2 : cmpt2=1\n",
+      "06:38:53: Thread 1 : cmpt1=1\n",
+      "06:38:53: Thread 0 : cmpt0=1\n",
+      "06:38:53: Thread 3 : cmpt3=1\n",
+      "06:38:54: Thread 0 : cmpt0=2\n",
+      "06:38:54: Thread 1 : cmpt1=2\n",
+      "06:38:54: Thread 2 : cmpt2=2\n",
+      "06:38:54: Thread 3 : cmpt3=2\n",
+      "06:38:54: Thread 2 : cmpt2=3\n",
+      "06:38:54: Thread 1 : cmpt1=3\n",
+      "06:38:54: Thread 0 : cmpt0=3\n",
+      "06:38:54: Thread 3 : cmpt3=3\n",
+      "06:38:55: Thread 0 : cmpt0=4\n",
+      "06:38:55: Thread 1 : cmpt1=4\n",
+      "06:38:55: Thread 2 : cmpt2=4\n",
+      "06:38:55: Thread 3 : cmpt3=4\n",
+      "06:38:55: Thread 0: terminé\n",
+      "06:38:55: Thread 1: terminé\n",
+      "06:38:55: Thread 2: terminé\n",
+      "06:38:55: Thread 3: terminé\n"
+     ]
+    }
+   ],
    "source": [
     "# Programmation concurente - Illustration de l'ordre d'exécution de threads \n",
     "import threading\n",
@@ -127,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<table><tr><td style=\"color:red; font-size:14px\"><strong>REMARQUE</strong> : L'ordre dans lequel sont démarrés les threads ne donne aucune indication sur l'ordre dans lequel ils peuvent se terminer.</td></tr></table>"
+    "<table><tr><td style=\"color:red; font-size:14px\"><strong>REMARQUE</strong> : l'ordre dans lequel sont démarrés les threads ne donne aucune indication sur l'ordre dans lequel ils peuvent se terminer.</td></tr></table>"
    ]
   },
   {
@@ -141,9 +182,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06:35:52: Thread 0 - cpt=0\n",
+      "06:35:52: Thread 0 - cpt=1\n",
+      "06:35:52: Thread 1 - cpt=1\n",
+      "06:35:52: Thread 0 - cpt=2\n",
+      "06:35:52: Thread 2 - cpt=2\n",
+      "06:35:52: Thread 1 - cpt=2\n",
+      "06:35:52: Thread 1 - cpt=3\n",
+      "06:35:52: Thread 1 - cpt=4\n",
+      "06:35:52: Thread 1 - cpt=5\n",
+      "06:35:52: Thread 1 - cpt=6\n",
+      "06:35:52: Thread 1 - cpt=7\n",
+      "06:35:52: Thread 1 - cpt=8\n",
+      "06:35:52: Thread 1 - cpt=9\n",
+      "06:35:52: Thread 1 - cpt=10\n",
+      "06:35:52: Thread 2 - cpt=3\n",
+      "06:35:52: Thread 2 - cpt=4\n",
+      "06:35:52: Thread 0 - cpt=3\n",
+      "06:35:52: Thread 0 - cpt=4\n",
+      "06:35:52: Thread 0 - cpt=5\n",
+      "06:35:52: Thread 3 - cpt=2\n",
+      "06:35:52: Thread 2 - cpt=5\n",
+      "06:35:52: Thread 2 - cpt=6\n",
+      "06:35:52: Thread 3 - cpt=3\n",
+      "06:35:52: Thread 0 - cpt=6\n",
+      "06:35:52: Thread 0 - cpt=7\n",
+      "06:35:52: Thread 3 - cpt=4\n",
+      "06:35:52: Thread 3 - cpt=5\n",
+      "06:35:52: Thread 3 - cpt=6\n",
+      "06:35:52: Thread 2 - cpt=7\n",
+      "06:35:52: Thread 0 - cpt=8\n",
+      "06:35:52: Thread 0 - cpt=9\n",
+      "06:35:52: Thread 2 - cpt=8\n",
+      "06:35:52: Thread 2 - cpt=9\n",
+      "06:35:52: Thread 2 - cpt=10\n",
+      "06:35:52: Thread 2 - cpt=11\n",
+      "06:35:52: Thread 3 - cpt=7\n",
+      "06:35:52: Thread 3 - cpt=8\n",
+      "06:35:52: Thread 3 - cpt=9\n",
+      "06:35:52: Thread 3 - cpt=10\n",
+      "06:35:52: Thread 3 - cpt=11\n",
+      "06:35:52: Valeur finale = 12\n"
+     ]
+    }
+   ],
    "source": [
     "# Programmation concurente - Compteur partagé\n",
     "# Illustration du problème de concurrence v1\n",
@@ -204,7 +293,7 @@
    "metadata": {},
    "source": [
     "#### 3.B Section critique\n",
-    "<em>Pour corriger le problème identifié dans le code précédent, il faut rendre <strong>EXCLUSIF</strong> l'accès à la variable <strong>COMPTEUR</strong>. On peut pour cela utiliser un verrou. Un <strong>verrou</strong> est un objet que l'on essaye d'acquérir. Si un Thread est le premier à en faire la demande, il l'acquiert. Il peut le rendre à tout moment. Si en revanche un autre Thread le détient alors tous les Threads qui tentent d'y accéder sont bloqués jusqu'à ce qu'il soit libéré. On construit un verrou avec la méthode <strong>Lock()</strong> du <strong>module threading</strong>. On peut alors tenter de l'acquérir avec la méthode <strong>acquire()</strong> et le rendre avec la méthode <strong>release()</strong>.</em>"
+    "<em>Pour corriger le problème identifié dans le code précédent, il faut rendre <strong>EXCLUSIF</strong> l'accès à la variable <strong>COMPTEUR</strong>. On peut pour cela utiliser un verrou. Un <strong>verrou</strong> est un objet que l'on essaye d'acquérir. Si un thread est le premier à en faire la demande, il l'acquiert. Il peut le rendre à tout moment. Si en revanche un autre thread le détient alors tous les threads qui tentent d'y accéder sont bloqués jusqu'à ce qu'il soit libéré. On construit un verrou avec la méthode <strong>Lock()</strong> du <strong>module threading</strong>. On peut alors tenter de l'acquérir avec la méthode <strong>acquire()</strong> et le rendre avec la méthode <strong>release()</strong>.</em>"
    ]
   },
   {
@@ -216,9 +305,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06:49:00: Thread 0 - cpt=0\n",
+      "06:49:00: Thread 0 - cpt=1\n",
+      "06:49:00: Thread 0 - cpt=2\n",
+      "06:49:00: Thread 0 - cpt=3\n",
+      "06:49:00: Thread 0 - cpt=4\n",
+      "06:49:00: Thread 0 - cpt=5\n",
+      "06:49:00: Thread 0 - cpt=6\n",
+      "06:49:00: Thread 0 - cpt=7\n",
+      "06:49:00: Thread 0 - cpt=8\n",
+      "06:49:00: Thread 0 - cpt=9\n",
+      "06:49:00: Thread 1 - cpt=10\n",
+      "06:49:00: Thread 1 - cpt=11\n",
+      "06:49:00: Thread 1 - cpt=12\n",
+      "06:49:00: Thread 1 - cpt=13\n",
+      "06:49:00: Thread 1 - cpt=14\n",
+      "06:49:00: Thread 1 - cpt=15\n",
+      "06:49:00: Thread 1 - cpt=16\n",
+      "06:49:00: Thread 1 - cpt=17\n",
+      "06:49:00: Thread 1 - cpt=18\n",
+      "06:49:00: Thread 1 - cpt=19\n",
+      "06:49:00: Thread 3 - cpt=20\n",
+      "06:49:00: Thread 3 - cpt=21\n",
+      "06:49:00: Thread 3 - cpt=22\n",
+      "06:49:00: Thread 3 - cpt=23\n",
+      "06:49:00: Thread 3 - cpt=24\n",
+      "06:49:00: Thread 3 - cpt=25\n",
+      "06:49:00: Thread 3 - cpt=26\n",
+      "06:49:00: Thread 3 - cpt=27\n",
+      "06:49:00: Thread 3 - cpt=28\n",
+      "06:49:00: Thread 3 - cpt=29\n",
+      "06:49:00: Thread 2 - cpt=30\n",
+      "06:49:00: Thread 2 - cpt=31\n",
+      "06:49:00: Thread 2 - cpt=32\n",
+      "06:49:00: Thread 2 - cpt=33\n",
+      "06:49:00: Thread 2 - cpt=34\n",
+      "06:49:00: Thread 2 - cpt=35\n",
+      "06:49:00: Thread 2 - cpt=36\n",
+      "06:49:00: Thread 2 - cpt=37\n",
+      "06:49:00: Thread 2 - cpt=38\n",
+      "06:49:00: Thread 2 - cpt=39\n",
+      "06:49:00: Valeur finale = 40\n"
+     ]
+    }
+   ],
    "source": [
     "# Programmation concurente - Compteur partagé\n",
     "# Illustration du problème de concurrence v1\n",
@@ -263,7 +400,7 @@
     "> Un verrou est créé dans le programme ci-dessus par : <span style=\"font-family:Consolas;font-weight:bold;font-style:normal\">verrou = threading.Lock()</span> <br>\n",
     "> L'objet verrou possède deux méthodes : **acquire()** et **release()**  <br>\n",
     "> <br>\n",
-    "> a) Placez le verrou dans le code ci-dessous pour protéger la section critique. <br>\n",
+    "> a) Placez le verrou dans le code ci-dessus pour protéger la section critique. <br>\n",
     "> b) Testez le programme avec différentes bornes pour la boucle for. Que remarquez-vous ? <br>\n",
     "> c) Expliquez pourquoi on a corrigé le problème de concurrence entre les threads t0, t1, t2 et t3."
    ]
@@ -274,7 +411,7 @@
    "source": [
     "<p style=\"color:blue; font-weight:bold\">CORRECTION Activité 3</p>\n",
     "<ul style=\"color:blue;\">\n",
-    "    <li>a) verrou.acquire et verrou.release() dans le code ci-dessus.</li>\n",
+    "    <li>a) verrou.acquire et verrou.release() sont placés dans le code ci-dessus.</li>\n",
     "    <li>b) Le résultat est toujours celui attendu car la commutation de contexte est seulement possible à la sortie de la section critique.</li>\n",
     "    <li>c) Un thread ne peut pas incrémenter le compteur s'il ne dispose pas du verrou. Un seul thread peut disposer du verrou. Pour qu'un thread se termine, il doit avoir incrémenté le compteur n fois. </li>\n",
     "</ul>"
@@ -286,9 +423,9 @@
    "source": [
     "### 4. Interblocage\n",
     "L'interblocage se produit lorsque des processus concurrents **s'attendent mutuellement**. L'utilisation de plusieurs verrous rend le risque d'**interblocages** possible.<br>\n",
-    "Dans l'exemple ci-dessous P1 et Pe sont interbloqués car : <br>\n",
-    "- P1 dispose de D1 et attend D2. <br>\n",
-    "- P2 dispose de D2 et attend D1. <br>\n",
+    "Dans l'exemple ci-dessous **P1** et **P2** sont **interbloqués** car : <br>\n",
+    "- Le processus **P1** dispose de la ressource **D1** et attend la ressource **D2**. <br>\n",
+    "- Le processus **P2** dispose de la ressource **D2** et attend la ressource **D1**. <br>\n",
     "<img src=\"img/interblocage.png\">"
    ]
   },
@@ -439,7 +576,7 @@
    "metadata": {},
    "source": [
     "> **Activité 5**<br>\n",
-    "> En vous inspirant du programme du paragraphe 2, écrivez** un programme qui crée et démarre **quatre** fonctions concurrentes affichant plusieurs fois un message de bienvenue personnalisé (maximum **dix** fois le message).<br>\n",
+    "> En vous inspirant du programme du paragraphe 2, **écrivez** un programme qui crée et démarre **quatre** fonctions concurrentes affichant plusieurs fois un message de bienvenue personnalisé (maximum **dix** fois le message).<br>\n",
     "\n",
     "> *Exemple de résultats attendus*<br>\n",
     "Bonjour, je suis le thread 0 et ceci est le message 1<br>\n",
@@ -492,9 +629,9 @@
    "source": [
     "> **Activité 6a** <br>\n",
     "> On considère un petit système embarqué : un **microcontrôleur** relié à trois **LED A, B, C**. Une LED peut être éteinte ou éclairée et on peut configurer sa couleur. On dispose de trois programmes qui affichent des signaux lumineux en faisant clignoter les LED. Chaque programme possède une LED primaire et une LED secondaire. <br>\n",
-    "> - Le programme P1 affiche ses signaux sur A (primaire) et B (secondaire) en vert.<br>\n",
-    "> - Le programme P2 affiche ses signaux sur B (primaire) et C (secondaire) en bleu.<br>\n",
-    "> - Le programme P3 affiche ses signaux sur C (primaire) et A (secondaire) en rouge.<br>\n",
+    "> - Le programme P1 émet ses signaux sur A (primaire) et B (secondaire) en vert.<br>\n",
+    "> - Le programme P2 émet ses signaux sur B (primaire) et C (secondaire) en bleu.<br>\n",
+    "> - Le programme P3 émet ses signaux sur C (primaire) et A (secondaire) en rouge.<br>\n",
     ">\n",
     "> Comme les LED ne peuvent pas être configurées dans deux couleurs en même temps, le système propose deux primitives **acquerirLED(nom)** et **rendreLED(nom)** qui permettent respectivement d'acquérir et de relâcher une LED. <br> **nom** prend la valeur primaire ou secondaire. <br> Si une LED est déjà acquise par un programme Pi alors acquerirLED(nom) dans un programme Pj bloque Pj (i différent de j).<br>\n",
     "> On suppose que chacun des trois programmes P1, P2, P3 effectue les **actions** suivantes en boucle :<br>\n",
@@ -555,9 +692,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "07:09:22: LedA=vert par P1\n",
+      "07:09:22: LedB=vert par P1\n",
+      "07:09:22: LedB relachée par P1\n",
+      "07:09:22: LedB=bleu par P2\n",
+      "07:09:22: LedA relachée par P1\n",
+      "07:09:22: LedA=vert par P1\n",
+      "07:09:22: LedC=rouge par P3\n"
+     ]
+    }
+   ],
    "source": [
     "# Correction 6b\n",
     "# MICROLED - Illustration de l'interblocage dans la commande des Leds\n",
@@ -606,6 +757,20 @@
     "### 6. A retenir\n",
     "<em>Les systèmes d'exploitation multitâches sont la norme. Ils permettent d'exécuter de façon <strong>concurrente</strong> plusieurs programmes. L'exécution d'un programme s'appelle un <strong>processus</strong>. C'est le système d'exploitation et en particulier l'<strong>ordonnanceur</strong>, qui détermine quel processus s'exécute à un instant donné. Le fait pour un processus d'être interrompu s'appelle une <strong>commutation de contexte</strong>. Plusieurs processus s'exécutant de façon concurrente peuvent s'<strong>interbloquer</strong> s'ils attendent de pouvoir accéder à un même ensemble de <strong>ressources en accès exclusif</strong>. Les <strong>threads</strong> ou <strong>processus légers</strong> sont des \"sous-processus\" s'exécutant de manière concurrente. L'accès à des ressources par plusieurs threads peut être protégé par des <strong>verrous</strong>. Une portion de code comprise entre l'acquisition et le relâchement d'un verrou s'appelle une <strong>section critique</strong>.</em> Numérique et Sciences Informatiques - <span class=\"codepy\">ellipses</span>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
